@@ -1,5 +1,5 @@
 plugins {
-    kotlin("jvm") version "1.6.20"
+    kotlin("jvm") version "1.6.21"
     application
 }
 
@@ -37,7 +37,6 @@ tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
 
 application {
     mainClass.set("PcfgToolMainKt")
-    //applicationDefaultJvmArgs = setOf("-Xms4g", "-XX:MaxTenuringThreshold=15", "-Xmx14g")
-    applicationDefaultJvmArgs = setOf("-Xms4g", "-XX:+UnlockExperimentalVMOptions" ,"-XX:+UseZGC", "-Xmx14g")
+    applicationDefaultJvmArgs = setOf("-Xms4g", "-XX:MaxTenuringThreshold=15", "-Xmx14g")
     executableDir = ""
 }
